--- a/src/img/1.md
+++ b/src/img/1.md
@@ -1,24 +1,45 @@
+our team 字体.png, 340, 92, 0, 0
+右指示-红.png, 26, 52, 348, 116
+右指示-灰 copy 2.png, 26, 52, 376, 116
+右指示-灰 copy.png, 26, 52, 400, 0
+右指示-灰.png, 26, 52, 404, 116
+左指示-红.png, 26, 52, 406, 54
+左指示-灰.png, 26, 52, 428, 0
+右箭头 copy.png, 40, 40, 432, 108
+右箭头.png, 40, 40, 432, 150
+Group 35.png, 159, 39, 0, 152
+圆形右箭头.png, 28, 28, 161, 152
+iconfont-dianhua.png, 24, 26, 191, 152
+iconfont-icon363601 (1).png, 24, 26, 217, 152
+iconfont-weixin.png, 30, 24, 434, 82
+置顶.png, 28, 18, 345, 170
 
-%filename%, %width%, %height%, %x%, %y%
-======================================
-关于我们——图.png, 353, 405, 0, 0
-our team 字体.png, 340, 92, 0, 407
-版权登记.png, 47, 54, 0, 501
-商标咨询.png, 40, 54, 49, 501
-商标注册.png, 48, 52, 91, 501
-项目申请.png, 49, 52, 141, 501
-右指示-红.png, 26, 52, 192, 501
-右指示-灰.png, 26, 52, 220, 501
-左指示-红.png, 26, 52, 248, 501
-左指示-灰.png, 26, 52, 276, 501
-右箭头.png, 40, 40, 304, 501
-圆形右箭头.png, 28, 28, 304, 543
-置顶.png, 28, 18, 32, 557
-more.png, 14, 14, 355, 0
-热线图标.png, 24, 26, 117, 555
 
-==========================#####
-傻鸟知服图标.png, 48, 26, 143, 555
-qq图标.png, 24, 26, 91, 555
-微信二维码.png, 26, 26, 193, 555
-iconfont-weixin.png, 30, 24, 0, 557
+
+******************************
+傻鸟知服图标.png, 48, 26, 295, 152
+qq图标.png, 24, 26, 243, 152
+热线图标.png, 24, 26, 269, 152
+微信二维码.png, 26, 26, 434, 54
+
+**********************
+
+p.png, 56, 56, 232, 94
+r.png, 56, 56, 290, 94
+c.png, 56, 56, 0, 94
+项目.png, 56, 56, 348, 58
+
+Shape.png, 56, 56, 342, 0
+Group 22.png, 56, 56, 116, 94
+Group 23.png, 56, 56, 174, 94
+Group 21.png, 56, 56, 58, 94
+
+
+
+
+**********************************
+more.png, 14, 14, 474, 0
+more2.png, 14, 14, 474, 26
+
+
+
