继续开发首页

--- a/src/img/1.md
+++ b/src/img/1.md
@@ -9,10 +9,9 @@ our team 字体.png, 340, 92, 0, 0
 右箭头.png, 40, 40, 432, 150
 Group 35.png, 159, 39, 0, 152
 圆形右箭头.png, 28, 28, 161, 152
-iconfont-dianhua.png, 24, 26, 191, 152
-iconfont-icon363601 (1).png, 24, 26, 217, 152
-iconfont-weixin.png, 30, 24, 434, 82
 置顶.png, 28, 18, 345, 170
+微信二维码.png, 26, 26, 434, 54
+
 
 
 
@@ -20,7 +19,18 @@ iconfont-weixin.png, 30, 24, 434, 82
 傻鸟知服图标.png, 48, 26, 295, 152
 qq图标.png, 24, 26, 243, 152
 热线图标.png, 24, 26, 269, 152
-微信二维码.png, 26, 26, 434, 54
+iconfont-weixin.png, 30, 24, 434, 82
+
+
+////////////hover\\\\\\\\\\\\\\
+
+
+iconfont-icon363601 (1).png, 24, 26, 217, 152
+iconfont-dianhua.png, 24, 26, 191, 152
+
+
+
+
 
 **********************
 
@@ -29,6 +39,8 @@ r.png, 56, 56, 290, 94
 c.png, 56, 56, 0, 94
 项目.png, 56, 56, 348, 58
 
+
+////////////hover\\\\\\\\\\\\\\
 Shape.png, 56, 56, 342, 0
 Group 22.png, 56, 56, 116, 94
 Group 23.png, 56, 56, 174, 94
